2011-01-07  Murray Cumming  <murrayc@murrayc.com>

	Use the m4 convert files from atkmm and pangomm instead of repeating them.

	* configure.ac: Discover the path of the pangomm and atkmm m4 files for use 
	instead of repeating them here.
	* tools/m4: Remove convert_pango.m4 and convert_atk.m4.

2011-01-07  Murray Cumming  <murrayc@murrayc.com>

	Gdk::Cursor: Avoid warnings and failures about reusing existing C instances. 

	* gdk/src/cursor.[hg|ccg]: Remove the constructors, because the 
	gdk_cursor_new_*() functions really return existing instances instead of 
	always returning new instances.
	* demos/gtk-demo/example_change_display.cc: Use Gdk::Cursor via RefPtr.

2011-01-06  Krzesimir Nowak  <qdlacz@gmail.com>

	Wrapped gdk_device_get_history().

	* gdk/src/device.[hg|ccg]: Wrapped gdk_device_get_history().
	* gdk/src/timecoord.[hg|ccg]: New files.
	* gdk/src/filelist.am: Added new files to build.
	
2011-01-06  Murray Cumming  <murrayc@murrayc.com>

	Range: Remove get/set_update_policy(), to fix the build.

	* gtk/src/enums.hg: Remove the UpdateType enum.
	* gtk/src/range.hg: Remove get/set_update_policy() and the property,
	because they were removed from GTK+ 3.

2011-01-06  Murray Cumming  <murrayc@murrayc.com>

	TreeModel::iterator::operator--(): Use gtk_tree_model_iter_previous().

	* gtk/src/treeiter.ccg: Use the new C function instead of the code that we 
	copied from totem.

2011-01-05  Murray Cumming  <murrayc@murrayc.com>

	Cursor: Make the API public, not protected, fixing the previous commit.

	* gdk/src/cursor.hg: Fix my typo.

2011-01-05  Murray Cumming  <murrayc@murrayc.com>

	Cursor: Add create() methods. (this had the wrong commit message)

	* gdk/src/cursor.hg: Add create() methods, making the constructors protected, 
	because this should now be used via RefPtr.

2011-01-05  Murray Cumming  <murrayc@murrayc.com>

	Minor corrections to previous commit to make things clearer.

	* gtk/src/image.hg:
	* gtk/src/texttag.hg:
	* gtk/src/toolbar.hg: