@@ -1,3 +1,12 @@
+2011-01-08  Murray Cumming  <murrayc@murrayc.com>
+
+	Use RefPtr::reset() instead of deprecated RefPtr::clear().
+
+	* demos/gtk-demo/example_change_display.cc:
+	* demos/gtk-demo/example_images.cc:
+	* demos/gtk-demo/example_stockbrowser.cc: These were causing build errors 
+	now that we build with deprecated glibmm API disabled.
+
 2011-01-07  Murray Cumming  <murrayc@murrayc.com>
 
 	Use the m4 convert files from atkmm and pangomm instead of repeating them.
